apps/default/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: default
  labels:
    app: qbittorrent
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: qbittorrent
  type: LoadBalancer
  loadBalancerIP: 192.168.1.163
