apps/default/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: bramble-ca-issuer
    traefik.ingress.kubernetes.io/router.middlewares: networking-https-redirect@kubernetescrd
spec:
  rules:
  - host: torrent.bramble.home
    http:
      paths:
      - backend:
          service:
            name: qbittorrent
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
        - torrent.bramble.home
      secretName: torrent-tls
